Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: Impala 2.0
-
Fix Version/s: Impala 2.9.0
-
Component/s: Backend
-
Labels:
-
Epic Color:ghx-label-5
Description
Now that HDFS-11529 is resolved, we can go ahead and use the new API to get more information if we encounter an "Unknown Error 255".
https://github.com/apache/hadoop/commit/fda86ef2a32026c02d9b5d4cca1ecb7b4decd872