tests/data_errors/test_data_errors.py
@@ -21,6 +21,7 @@
 
 import pytest
 import random
+import subprocess
 
 from tests.beeswax.impala_beeswax import ImpalaBeeswaxException
 from tests.common.impala_test_suite import ImpalaTestSuite
@@ -64,6 +65,44 @@ class TestHdfsFileOpenFailErrors(ImpalaTestSuite):
       assert "Failed to open HDFS file" in str(e)
     self.client.execute(drop_stmt)
 
+# Test for IMPALA-5331 to verify that the libHDFS API hdfsGetLastExceptionRootCause()
+# works.
+@SkipIf.not_hdfs
+class TestHdfsUnknownErrors(ImpalaTestSuite):
+  @pytest.mark.execute_serially
+  def test_hdfs_safe_mode_error_255(self, unique_database):
+    create_stmt = "create table {0}.safe_mode_fail (x int)".format(unique_database)
+    insert_stmt = "insert into {0}.safe_mode_fail values (1)".format(unique_database)
+    self.execute_query_expect_success(self.client, create_stmt)
+    self.execute_query_expect_success(self.client, insert_stmt)
+    try:
+      # Check that we're not in safe mode.
+      output, error = subprocess.Popen(
+          ['hdfs', 'dfsadmin', '-safemode', 'get'],
+              stdout=subprocess.PIPE, stderr=subprocess.PIPE).communicate()
+      assert error is "", "Couldn't get status of Safe mode. Error: %s" % (error)
+      assert "Safe mode is OFF" in output
+      # Turn safe mode on.
+      output, error = subprocess.Popen(
+          ['hdfs', 'dfsadmin', '-safemode', 'enter'],
+              stdout=subprocess.PIPE, stderr=subprocess.PIPE).communicate()
+      assert error is "", "Couldn't turn Safe mode ON. Error: %s" % (error)
+      assert "Safe mode is ON" in output
+
+      # We shouldn't be able to write to HDFS when it's in safe mode.
+      ex = self.execute_query_expect_failure(self.client, insert_stmt)
+
+      # Confirm that it is an Unknown error with error code 255.
+      assert "Unknown error 255" in str(ex)
+      # Confirm that we were able to get the root cause.
+      assert "Name node is in safe mode" in str(ex)
+    finally:
+      # Leave safe mode.
+      output, error = subprocess.Popen(
+          ['hdfs', 'dfsadmin', '-safemode', 'leave'],
+              stdout=subprocess.PIPE, stderr=subprocess.PIPE).communicate()
+      assert error is "", "Couldn't turn Safe mode OFF. Error: %s" % (error)
+      assert "Safe mode is OFF" in output
 
 @SkipIfS3.qualified_path
 class TestHdfsScanNodeErrors(TestDataErrors):
